--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "writing-portfolio-theme",
-  "description": "A Wordpress portfolio theme built on Vue.js",
+  "name": "writing-theme",
+  "description": "Writing theme for Wordpress built with Vue.js",
   "version": "1.0.0",
   "author": "Tim Beckett <timbeckett@ymail.com>",
   "license": "MIT",
@@ -10,8 +10,22 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "axios": "^0.17.1",
-    "vue": "^2.5.11",
+    "axios": "^0.18.0",
+    "file-system": "^2.2.2",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^5.0.0",
+    "gulp-cache": "^1.0.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-jshint": "^2.1.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-notify": "^3.2.0",
+    "gulp-order": "^1.1.1",
+    "gulp-ruby-sass": "^3.0.0",
+    "gulp-uglify": "^3.0.0",
+    "shell": "^0.5.0",
+    "vue": "^2.5.16",
     "vue-router": "^3.0.1"
   },
   "browserslist": [
@@ -30,7 +44,7 @@
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "vue-loader": "^13.0.5",
-    "vue-template-compiler": "^2.4.4",
+    "vue-template-compiler": "^2.5.13",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
   }
